--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Karins dagpleje</title>
+	<title>Karins dagpleje (test)</title>
 
 </head>
 
