--- a/index.html
+++ b/index.html
@@ -104,7 +104,38 @@
 
 				<div class="container clearfix">
 
-					<div id="values" class="row clearfix">
+<div class="line notopmargin"></div>
+											<div class="col_two_fifth topmargin nobottommargin">
+												<img src="portraet.jpg" width="430" data-animate="fadeIn"/>
+											</div>
+
+											<div class="col_three_fifth nobottommargin col_last">
+
+												<div id="portrait"  class="heading-block">
+													<h3>Velkommen til Karins Dagpleje</h3>
+													<span>Rolig, nærværende, mor til tre og uddannet pædagog.</span>
+												</div>
+
+												<p>Hej. Jeg hedder Karin, er 32 år gammel og uddannet pædadgog.</p>
+
+												<p>I dagpleje-alderen er der fart på udviklingen og behovet for nærvær og tryghed er stort. Derfor har jeg lavet mit hjem til dagpleje, hvor jeg kan være med til at give en lille flok små børn overskuelige rammer, tæt kontakt til en voksen og en gruppe nære legekammerater.</p>
+
+												<p>Jeg er mor til tre børn på mellem elleve måneder og ni år og har pædagogisk erfaring primært fra vuggestuen, altså med de 0-3 årige. Jeg bor sammen med min mand, Asger, i et hyggeligt og børnevenligt rækkehus i Mårslet med en lille lukket have - tæt på Vilhelmsborg, legepladser og natur.</p>
+
+												<p>Jeg er rolig og nærværende. Jeg kan lide “nuet” og at dele oplevelser med børn. At nyde en gåtur i regnvejr. At tale om alt det vi ser på vejen. At være sammen og være i “flow”. At bage, synge, læse og male. At sanse og lære i trygge og stille omgivelser.</p>
+
+												<p>I kan læse om mine pædagogiske værdier og værktøjer nedenfor - og I er selvfølgelig meget velkomne til at ringe eller sende en SMS til mig, hvis I har lyst til at høre mere.</p>
+
+					<!-- Jeg går op i at støtte børnene i deres udvikling på det niveau, de befinder sig på lige nu. -->
+					 <!-- Vores hus er børnevenligt, hvor både for- og baghave er lukket af. I haven er et par kaniner, man kan fodre og observere. Der er adgang til en dejlig legeplads med gynger og rør. I vores hus er et legeværelse til dagplejebørnenes legesager og middagslur. Værelset er lyst og med et stort vindue i børnevenlig højde, så man kan vinke farvel til forældrene og holde øje med skraldebilen :-) Dagplejen holder til nederst i mit hus, med en låge for trappen. Dog er de første tre trin ikke lukket af. Jeg tror på at børn har godt af at lære de motoriske færdigheder tidligt. Når børnene viser interesse for trappen, vil jeg guide dem og lave en aktivitet ud af det. -->
+					 <!-- for tre-fire små børn. Heriblandt min egen datter, Gerda, der er fra august 15 og vant til at være en del af en flok som lillesøster til to store piger. -->
+					<!-- Et privat pasningstilbud for børn fra 0-3 år under frit valg ordningen i Aarhus Kommune. -->
+											</div>
+
+											<div class="clear"></div>
+											<div class="line"></div>
+
+																<div id="values" class="row clearfix">
 
 						<div class="col-md-4 center bottommargin">
 							<i class="i-plain color i-large icon-line-sun inline-block" style="margin-bottom: 20px;"></i>
@@ -165,34 +196,6 @@
 
 					<div class="line notopmargin"></div>
 
-						<div class="col_two_fifth topmargin nobottommargin">
-							<img src="portraet.jpg" width="430" data-animate="fadeIn"/>
-						</div>
-
-						<div class="col_three_fifth nobottommargin col_last">
-
-							<div id="portrait"  class="heading-block">
-								<h3>Velkommen til Karins Dagpleje</h3>
-								<span>Rolig, nærværende, mor til tre og uddannet pædagog.</span>
-							</div>
-
-							<p>Hej. Jeg hedder Karin, er 32 år gammel og uddannet pædadgog.</p>
-
-							<p>I dagpleje-alderen er der fart på udviklingen og behovet for nærvær og tryghed er stort. Derfor har jeg lavet mit hjem til dagpleje, hvor jeg kan være med til at give en lille flok små børn overskuelige rammer, tæt kontakt til en voksen og en gruppe nære legekammerater.</p>
-
-							<p>Jeg er mor til tre børn på mellem elleve måneder og ni år og har pædagogisk erfaring primært fra vuggestuen, altså med de 0-3 årige. Jeg bor sammen med min mand, Asger, i et hyggeligt og børnevenligt rækkehus i Mårslet med en lille lukket have - tæt på Vilhelmsborg, legepladser og natur.</p>
-
-							<p>Jeg er rolig og nærværende. Jeg kan lide “nuet” og at dele oplevelser med børn. At nyde en gåtur i regnvejr. At tale om alt det vi ser på vejen. At være sammen og være i “flow”. At bage, synge, læse og male. At sanse og lære i trygge og stille omgivelser.</p>
-
-							<p>I er selvfølgelig meget velkomne til at ringe eller sende en SMS til mig, hvis I har lyst til at høre mere.</p>
-
-<!-- Jeg går op i at støtte børnene i deres udvikling på det niveau, de befinder sig på lige nu. -->
- <!-- Vores hus er børnevenligt, hvor både for- og baghave er lukket af. I haven er et par kaniner, man kan fodre og observere. Der er adgang til en dejlig legeplads med gynger og rør. I vores hus er et legeværelse til dagplejebørnenes legesager og middagslur. Værelset er lyst og med et stort vindue i børnevenlig højde, så man kan vinke farvel til forældrene og holde øje med skraldebilen :-) Dagplejen holder til nederst i mit hus, med en låge for trappen. Dog er de første tre trin ikke lukket af. Jeg tror på at børn har godt af at lære de motoriske færdigheder tidligt. Når børnene viser interesse for trappen, vil jeg guide dem og lave en aktivitet ud af det. -->
- <!-- for tre-fire små børn. Heriblandt min egen datter, Gerda, der er fra august 15 og vant til at være en del af en flok som lillesøster til to store piger. -->
-<!-- Et privat pasningstilbud for børn fra 0-3 år under frit valg ordningen i Aarhus Kommune. -->
-						</div>
-
-						<div class="clear"></div><div class="line"></div>
 
 						<div id="section-faqs" class="heading-block title-center page-section">
 							<h2>Alt det praktiske</h2>
