adding menu behavior

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 							<li class="current"><a href="index.html"><div>Hjem</div></a></li>
 							<li><a href="#portrait" data-scrollto="#portrait"><div>Præsentation</div></a></li>
 							<li><a href="#values" data-scrollto="#values"><div>Værdier og pædagogik</div></a></li>
-							<li><a href="#content"><div>Praktisk</div></a></li>
-							<li><a href="#content"><div>Kontakt mig</div></a></li>
+							<li><a href="#faq" data-scrollto="#faq"><div>Praktisk</div></a></li>
+							<li><a href="#contact" data-scrollto="#contact"><div>Kontakt mig</div></a></li>
 						</ul>
 					</div>
 
@@ -197,7 +197,7 @@
 					<div class="line notopmargin"></div>
 
 
-						<div id="section-faqs" class="heading-block title-center page-section">
+						<div id="faq" class="heading-block title-center page-section">
 							<h2>Alt det praktiske</h2>
 							<span>Karins Dagpleje er privat pasningstilbud for børn fra 0-3 år under<br>frit valg ordningen i Aarhus Kommune</span>
 						</div>
@@ -249,7 +249,7 @@
 		============================================= -->
 		<section id="map-overlay">
 
-			<div class="container clearfix">
+			<div id="contact" class="container clearfix">
 
 				<!-- Contact Form Overlay
 				============================================= -->
