--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
 
 				<div class="container clearfix">
 
-<div class="line notopmargin"></div>
+          <div class="divider divider-center notopmargin"><i class="icon-circle"></i></div>
+
+<!-- <div class="line notopmargin"></div> -->
 											<div class="col_two_fifth topmargin nobottommargin">
 												<img src="portraet.jpg" width="430" data-animate="fadeIn"/>
 											</div>
@@ -133,7 +135,7 @@
 											</div>
 
 											<div class="clear"></div>
-											<div class="line"></div>
+                      <div class="divider divider-center"><i class="icon-circle"></i></div>
 
 																<div id="values" class="row clearfix">
 
@@ -194,12 +196,12 @@
 
 					</div>
 
-					<div class="line notopmargin"></div>
+          <div class="divider divider-center notopmargin"><i class="icon-circle"></i></div>
 
 
 						<div id="faq" class="heading-block title-center page-section">
 							<h2>Alt det praktiske</h2>
-							<span>Karins Dagpleje er privat pasningstilbud for børn fra 0-3 år under<br>frit valg ordningen i Aarhus Kommune</span>
+							<span>Karins Dagpleje er privat pasningstilbud for børn fra 0-3 år under frit valg ordningen i Aarhus Kommune</span>
 						</div>
 
 						<div class="col_half nobottommargin">
